--- a/orange/ingress-orange.yaml
+++ b/orange/ingress-orange.yaml
@@ -1,7 +1,7 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: fruits-ingress
+  name: fruitsingress
   annotations:
     ingress.kubernetes.io/rewrite-target: /
 spec:
