--- a/orange/ingress-orange.yaml
+++ b/orange/ingress-orange.yaml
@@ -13,9 +13,9 @@ spec:
         paths:
           - path: /orange
             backend:
-              serviceName: orangeservice.orange.svc.cluster.local
+              serviceName: "orangeservice.orange.svc.cluster.local"
               servicePort: 5678
           - path: /apple
             backend:
-              serviceName: appleservice.apple.svc.cluster.local
+              serviceName: "appleservice.apple.svc.cluster.local"
               servicePort: 5678
