--- a/banana/values.yaml
+++ b/banana/values.yaml
@@ -2,7 +2,7 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
+replicaCount: 10
 
 image:
   repository: nginx
@@ -72,7 +72,7 @@ resources:
     memory: 128Mi
 
 autoscaling:
-  enabled: true
+  enabled: false
   minReplicas: 10
   maxReplicas: 100
   targetCPUUtilizationPercentage: 80
