--- a/apple/secret-apply.yaml
+++ b/apple/secret-apply.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: apple
   annotations:
     avp.kubernetes.io/path: "kv-indonesia/data/jawabarat"
+    avp.kubernetes.io/kv-version: "1"
 type: Opaque
 stringData:
   city: <sample>
