--- a/apple/apple.yaml
+++ b/apple/apple.yaml
@@ -11,3 +11,6 @@ spec:
       image: hashicorp/http-echo
       args:
         - "-text=apple"
+      envFrom:
+      - secretRef:
+          name: apple-secret
