--- a/apple/secret-apply.yaml
+++ b/apple/secret-apply.yaml
@@ -1,11 +1,10 @@
-kind: Secret
+kind: ConfigMap
 apiVersion: v1
 metadata:
   name: apple-secret
   namespace: apple
   annotations:
     avp.kubernetes.io/path: "kv-indonesia/data/jawabarat"
-    avp.kubernetes.io/kv-version: "2"
 type: Opaque
 stringData:
   city: <city>
