--- a/apple/secret-apply.yaml
+++ b/apple/secret-apply.yaml
@@ -8,3 +8,13 @@ metadata:
 type: Opaque
 stringData:
   city: <city>
+--- 
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: apple-configmap
+  namespace: apple
+  annotations:
+    avp.kubernetes.io/path: "kv-indonesia/data/jawabarat"
+data:
+  country: <country>
